// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> renders correctly 1`] = `
<Checkbox
  className="Checkbox"
  error=""
  id="Subscribe"
  isChecked={null}
  isDisabled={false}
  isOptional={false}
  isRTLLabel={false}
  isReadOnly={false}
  isToggle={false}
  label="Subscribe to newsletter"
  name="Subscribe"
  onChange={[MockFunction]}
  value="Subscribe"
>
  <div
    className="Checkbox  "
  >
    <label
      htmlFor="Subscribe"
    >
      <input
        checked={null}
        className="Checkbox-input"
        disabled={false}
        id="Subscribe"
        name="Subscribe"
        onChange={[Function]}
        readOnly={false}
        type="checkbox"
        value="Subscribe"
      />
      <span
        className="Checkbox-label"
      >
        <span>
          Subscribe to newsletter
        </span>
      </span>
    </label>
  </div>
</Checkbox>
`;

exports[`<Checkbox /> renders correctly when an error is present 1`] = `
<Checkbox
  className="Checkbox"
  error="Required field"
  id="Subscribe"
  isChecked={null}
  isDisabled={false}
  isOptional={false}
  isRTLLabel={false}
  isReadOnly={false}
  isToggle={false}
  label="Subscribe to newsletter"
  name="Subscribe"
  onChange={[MockFunction]}
  value="Subscribe"
>
  <div
    className="Checkbox has-error "
  >
    <label
      htmlFor="Subscribe"
    >
      <input
        checked={null}
        className="Checkbox-input"
        disabled={false}
        id="Subscribe"
        name="Subscribe"
        onChange={[Function]}
        readOnly={false}
        type="checkbox"
        value="Subscribe"
      />
      <span
        className="Checkbox-label"
      >
        <span>
          Subscribe to newsletter
          <div
            className="Checkbox-error"
          >
            <p>
              Required field
            </p>
          </div>
        </span>
      </span>
    </label>
  </div>
</Checkbox>
`;

exports[`<Checkbox /> renders correctly when is disabled 1`] = `
<Checkbox
  className="Checkbox"
  error=""
  id="Subscribe"
  isChecked={null}
  isDisabled={true}
  isOptional={false}
  isRTLLabel={false}
  isReadOnly={false}
  isToggle={false}
  label="Subscribe to newsletter"
  name="Subscribe"
  onChange={[MockFunction]}
  value="Subscribe"
>
  <div
    className="Checkbox  "
  >
    <label
      htmlFor="Subscribe"
    >
      <input
        checked={null}
        className="Checkbox-input"
        disabled={true}
        id="Subscribe"
        name="Subscribe"
        onChange={[Function]}
        readOnly={false}
        type="checkbox"
        value="Subscribe"
      />
      <span
        className="Checkbox-label"
      >
        <span>
          Subscribe to newsletter
        </span>
      </span>
    </label>
  </div>
</Checkbox>
`;

exports[`<Checkbox /> renders correctly when is isReadOnly 1`] = `
<Checkbox
  className="Checkbox"
  error=""
  id="Subscribe"
  isChecked={null}
  isDisabled={false}
  isOptional={false}
  isRTLLabel={false}
  isReadOnly={true}
  isToggle={false}
  label="Subscribe to newsletter"
  name="Subscribe"
  onChange={[MockFunction]}
  value="Subscribe"
>
  <div
    className="Checkbox  "
  >
    <label
      htmlFor="Subscribe"
    >
      <input
        checked={null}
        className="Checkbox-input"
        disabled={false}
        id="Subscribe"
        name="Subscribe"
        onChange={[Function]}
        readOnly={true}
        type="checkbox"
        value="Subscribe"
      />
      <span
        className="Checkbox-label"
      >
        <span>
          Subscribe to newsletter
        </span>
      </span>
    </label>
  </div>
</Checkbox>
`;
